--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>All Countries</title>
 </head>
 <body>
-    
+    <h2>All Countries of the world!!!!</h2>
+
+
+
+    <script src="JS/main.js"></script>
 </body>
 </html>
